--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '2'
 services:
   zookeeper:
     image: wurstmeister/zookeeper
@@ -14,7 +14,7 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
   go:
-      image: go
+      image: dangkaka/zfeed
       ports:
         - "8080:8080"
       volumes:
