--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,13 +9,18 @@ services:
     ports:
       - "9092"
     environment:
-      KAFKA_ADVERTISED_HOST_NAME: 192.168.99.100
+      HOSTNAME_COMMAND: wget -t3 -T2 -qO-  http://169.254.169.254/latest/meta-data/local-ipv4
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-  go:
+    links:
+      - "zookeeper:zookeeper"
+  zfeed:
       image: dangkaka/zfeed
       ports:
         - "8080:8080"
       volumes:
             - ./app:/go/src/zfeed
+      links:
+            - "kafka:kafka"
